added glossary terms

--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -79,7 +79,7 @@
 
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-08-17}
+\date{2021-08-18}
 
 \begin{document}
 \maketitle
@@ -157,7 +157,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -180,7 +180,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -456,7 +456,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -852,7 +852,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1048,7 +1048,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1267,7 +1267,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1635,7 +1635,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -1735,7 +1735,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -1744,7 +1744,7 @@ Learn more about academic integrity from the \href{https://learningcommons.ubc.c
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -1753,7 +1753,7 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2021-08-17}
+\emph{Last updated 2021-08-18}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
@@ -1775,9 +1775,11 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 
 \textbf{Chi-square (\(\chi\)\textsuperscript{2}) goodness of fit test:} A statistical test used to test how well an observed discrete frequency (or probability) distribution fits some specified expectation.
 
-\textbf{Clinical trials:} Experiments that involve i) human participants who are assigned in advance to a group that receives a particular treatment designed to produce a biomedical or behavioural result and ii) evaluation of the effect of the treatments (NIH, 2017)
+\textbf{Choice experiment:} A type of scientific experiment where a categorical response variable is measured in relation to a manipulated independent variable.
 
 \textbf{Citizen science:} When members of the public engage in the research process. Often involving collaboration with researchers.
+
+\textbf{Clinical trials:} Experiments that involve i) human participants who are assigned in advance to a group that receives a particular treatment designed to produce a biomedical or behavioural result and ii) evaluation of the effect of the treatments (NIH, 2017)
 
 \textbf{Coefficient of determination (R2):} The proportion of the variance in the response variable that can be explained or predicted by the independent variable. It describes the strength of the relationship between two variables.
 
@@ -1789,11 +1791,17 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 
 \textbf{Confirmatory research:} Researchers used a well designed experiment to test the validity of predetermined hypotheses that can be disproved.
 
+\textbf{Continuous quantitative data:} Numeric data that lies on a continuum. So there are infinite possible values between integers and our data collection tool or convention determines to what decimal point we record the values to. Some examples include temperature, height, and distance.
+
 \textbf{Critical analysis:} Careful examination and evaluation of all parts of a research article including consideration of the study's strengths and weaknesses as they relate to study design, implementation, data collection, data analysis, and interpretation.
 
 \textbf{Data transformation:} A process where the format of the values within a dataset are changed. For example, all of the values within a dataset might be log transformed. This is often done when the original data does not meet the assumptions of a particular statistical test. After the data transformation researchers will re-assess those assumptions to see if they can perform the test on the newly transformed data.
 
+\textbf{Delimiters:} One or more characters used to separate strings of text. Some commonly used delimiters include commas (,), colons(:), semicolons(;) and pipes(\textbar).
+
 \textbf{Descriptive statistics:} A number used to summarize or describe a given data set or sample. Examples include mean, median, mode, standard deviation, and interquartile range.
+
+\textbf{Discrete quantitative data:} Numeric data that encompasses only whole integers and no fractions in-between. For example number of people or number or petals on a flower.
 
 \textbf{Diversity:} The practice or quality of having individuals who vary in terms of social class, ethnic background, sexual orientation, gender, religion, ability, etc.
 
@@ -1829,11 +1837,15 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 
 \textbf{Mean:} A commonly used descriptive statistic that measures the central tendency of a numeric variable. Specifically, the mean is the arithmetic average of a group of values.
 
+\textbf{Measured response experiment:} A type of scientific experiment where a quantitative response variable is measured in relation to a manipulated independent variable.
+
 \textbf{Median:} A descriptive statistic measuring the central tendency of a numeric variable. The median is the value separating the upper and lower halves of the variable. In other words the middle value of a group of numbers.
 
 \textbf{Metadata:} Data that provides information about other data.
 
 \textbf{Mode:} A descriptive statistic for a either a numeric or categorical variable. The mode is the value that appears most frequently.
+
+\textbf{Nominal categorical data:} In contrast to ordinal categorical data, this data has two or more discrete categories that have no natural order. For example, hair colour or blood type.
 
 \textbf{Null hypothesis (Ho):} Used alongside the alternative hypothesis in hypothesis testing. The null hypothesis states that there is no significant effect or relationship between phenomena, variables, or populations. Rather any differences observed are the result of random chance.
 
@@ -1844,6 +1856,8 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \textbf{Open notebooks:} Involves i) publishing or linking to data on an online platform before results are published in a peer-reviewed journal; ii) making information about the methodology and equipment used in a study publicly available; iii) openly discussing both positive and negative results in real time, as they are obtained.
 
 \textbf{Open science:} A movement and set of practices intended to combat the replication crisis, QRPs, and style trumping substance by making all parts of the scientific research process transparent and accessible, allowing for a critical review of how a study was conducted, ultimately enabling that study to be independently replicated. It also involves changing scientific culture to reward not just novel findings, but also the many other aspects of conducting good scientific research.
+
+\textbf{Ordinal categorical data:} In contrast to nominal categorical data, this data has two or more discrete categories have a natural order but there is no clearly defined interval between each category. For example, storm severity is often classified by stages - Stage 1, Stage 2 \ldots{} Stage 5 - where Stage 1 is less severe than stage 5. However, we don't know how much more severe one stage is than the next.
 
 \textbf{P value (\emph{p}):} The probability of getting a result that is the same or more extreme than what was observed. If the probability of getting that result due to random chance is sufficiently low, then it could be interpreted that there is a significant relationship. In contrast, a high \emph{p} value indicates a larger likelihood that the result was due to random chance and therefore there may be no significant relationship. The \emph{p} value required to establish significance is set by the researchers in advance of the study and is known as the significance level (\(\alpha\)).
 
@@ -1869,11 +1883,15 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 
 \textbf{R:} a programming language and free software for statistical computing. When used throughout the research process, it allows for openness in the research workflow and computational reproducibility.
 
+\textbf{Raw data:} Data that has been collected but not yet processed in any way.
+
 \textbf{Relative path:} In contrast to an absolute path, a relative path is a URL that only contains a portion of the path. It is relative to the root of the document and thus should start the path with the directory name that contains the document. For example, if you are writing a Markdown document and would like to include an image of a mealworm, place the mealworm image into the same directory (folder) as the Markdown document and the relative path may look like /BIOL116/project/mealworm.png. Whereas the absolute path might look like C:://Documents/BIOL116/project/mealworm.png.
 
 \textbf{Random assignment:} Assigning participants of a research study to each condition using a method of randomization. This ensures that each participant has an equal chance of being placed in each condition and helps to minimize bias.
 
 \textbf{Range:} A descriptive statistic or measure of variation for a set of values. Specifically, it measures the difference between the highest and lowest values.
+
+\textbf{Registered report:} ``A publishing format that emphasizes the importance of the research question and the quality of methodology by conducting peer review prior to data collection. High quality protocols are then provisionally accepted for publication if the authors follow through with the registered methodology.'' \href{https://www.cos.io/initiatives/registered-reports}{Center for Open Science}
 
 \textbf{Replication:} Thorough repetition of a study, using the same methods but different data.
 
