--- a/10-Glossary.Rmd
+++ b/10-Glossary.Rmd
@@ -22,9 +22,11 @@
 
 <a id="Chi-square-($\chi$^2^)-goodness-of-fit-test">**Chi-square ($\chi$^2^) goodness of fit test:**</a> A statistical test used to test how well an observed discrete frequency (or probability) distribution fits some specified expectation. 
 
-<a id="Clinical-trials">**Clinical trials:**</a> Experiments that involve i) human participants who are assigned in advance to a group that receives a particular treatment designed to produce a biomedical or behavioural result and ii) evaluation of the effect of the treatments (NIH, 2017)
+<a id="Choice-experiment">**Choice experiment:**</a> A type of scientific experiment where a categorical response variable is measured in relation to a manipulated independent variable.
 
 <a id="Citizen-science">**Citizen science:**</a> When members of the public engage in the research process. Often involving collaboration with researchers. 
+
+<a id="Clinical-trials">**Clinical trials:**</a> Experiments that involve i) human participants who are assigned in advance to a group that receives a particular treatment designed to produce a biomedical or behavioural result and ii) evaluation of the effect of the treatments (NIH, 2017)
 
 <a id="Coefficient-of-determination-(R<sup>2</sup>)">**Coefficient of determination (R<sup>2</sup>):**</a> The proportion of the variance in the response variable that can be explained or predicted by the independent variable. It describes the strength of the relationship between two variables.
 
@@ -36,11 +38,17 @@
 
 <a id="Confirmatory-research">**Confirmatory research:**</a> Researchers used a well designed experiment to test the validity of predetermined hypotheses that can be disproved. 
 
+<a id="Continuous-quantitative-data">**Continuous quantitative data:**</a> Numeric data that lies on a continuum. So there are infinite possible values between integers and our data collection tool or convention determines to what decimal point we record the values to. Some examples include temperature, height, and distance.  
+
 <a id="Critical-analysis">**Critical analysis:**</a> Careful examination and evaluation of all parts of a research article including consideration of the study’s strengths and weaknesses as they relate to study design, implementation, data collection, data analysis, and interpretation. 
 
 <a id="Data-transformation">**Data transformation:**</a> A process where the format of the values within a dataset are changed. For example, all of the values within a dataset might be log transformed. This is often done when the original data does not meet the assumptions of a particular statistical test. After the data transformation researchers will re-assess those assumptions to see if they can perform the test on the newly transformed data.
 
+<a id="Delimiters">**Delimiters:**</a> One or more characters used to separate strings of text. Some commonly used delimiters include commas (,), colons(\:), semicolons(\;) and pipes(\|).  
+
 <a id="Descriptive-statistics">**Descriptive statistics:**</a> A number used to summarize or describe a given data set or sample. Examples include mean, median, mode, standard deviation, and interquartile range. 
+
+<a id="Discrete-quantitative-data">**Discrete quantitative data:**</a> Numeric data that encompasses only whole integers and no fractions in-between. For example number of people or number or petals on a flower. 
 
 <a id="Diversity">**Diversity:**</a> The practice or quality of having individuals who vary in terms of social class, ethnic background, sexual orientation, gender, religion, ability, etc. 
 
@@ -76,11 +84,15 @@
 
 <a id="Mean">**Mean:**</a> A commonly used descriptive statistic that measures the central tendency of a numeric variable. Specifically, the mean is the arithmetic average of a group of values. 
 
+<a id="Measured-response-experiment">**Measured response experiment:**</a> A type of scientific experiment where a quantitative response variable is measured in relation to a manipulated independent variable.  
+
 <a id="Median">**Median:**</a> A descriptive statistic measuring the central tendency of a numeric variable. The median is the value separating the upper and lower halves of the variable. In other words the middle value of a group of numbers. 
 
 <a id="Metadata">**Metadata:**</a> Data that provides information about other data.
 
 <a id="Mode">**Mode:**</a> A descriptive statistic for a either a numeric or categorical variable. The mode is the value that appears most frequently.
+
+<a id="Nominal-categorical-data">**Nominal categorical data:**</a> In contrast to ordinal categorical data, this data has two or more discrete categories that have no natural order. For example, hair colour or blood type. 
 
 <a id="Null-hypothesis-(H<sub>o</sub>)">**Null hypothesis (H<sub>o</sub>):**</a> Used alongside the alternative hypothesis in hypothesis testing. The null hypothesis states that there is no significant effect or relationship between phenomena, variables, or populations. Rather any differences observed are the result of random chance.   
 
@@ -91,6 +103,8 @@
 <a id="Open-notebooks">**Open notebooks:**</a> Involves i) publishing or linking to data on an online platform before results are published in a peer-reviewed journal; ii) making information about the methodology and equipment used in a study publicly available; iii) openly discussing both positive and negative results in real time, as they are obtained.
 
 <a id="Open-science">**Open science:**</a> A movement and set of practices intended to combat the replication crisis, QRPs, and style trumping substance by making all parts of the scientific research process transparent and accessible, allowing for a critical review of how a study was conducted, ultimately enabling that study to be independently replicated. It also involves changing scientific culture to reward not just novel findings, but also the many other aspects of conducting good scientific research.
+
+<a id="Ordinal-categorical-data">**Ordinal categorical data:**</a> In contrast to nominal categorical data, this data has two or more discrete categories have a natural order but there is no clearly defined interval between each category. For example, storm severity is often classified by stages - Stage 1, Stage 2 … Stage 5 - where Stage 1 is less severe than stage 5. However, we don't know how much more severe one stage is than the next.
 
 <a id="P-value-(*p*)">**P value (*p*):**</a> The probability of getting a result that is the same or more extreme than what was observed. If the probability of getting that result due to random chance is sufficiently low, then it could be interpreted that there is a significant relationship. In contrast, a high *p* value indicates a larger likelihood that the result was due to random chance and therefore there may be no significant relationship. The *p* value required to establish significance is set by the researchers in advance of the study and is known as the significance level ($\alpha$).
 
@@ -114,13 +128,17 @@
 
 <a id="Questionable-research-practices">**Questionable research practices:**</a> A grey area of scientific practice in which researchers do not engage in outright misconduct such as fraud or plagiarism, but may unwittingly break rules of acceptable scientific practice in the pursuit of novel and promising results.
 
-<a id="R">**R:**</a> a programming language and free software for statistical computing. When used throughout the research process, it allows for openness in the research workflow and computational reproducibility. 
+<a id="R">**R:**</a> a programming language and free software for statistical computing. When used throughout the research process, it allows for openness in the research workflow and computational reproducibility.
+
+<a id="Raw-data">**Raw data:**</a> Data that has been collected but not yet processed in any way.   
 
 <a id="Relative-path">**Relative path:**</a> In contrast to an absolute path, a relative path is a URL that only contains a portion of the path. It is relative to the root of the document and thus should start the path with the directory name that contains the document. For example, if you are writing a Markdown document and would like to include an image of a mealworm, place the mealworm image into the same directory (folder) as the Markdown document and the relative path may look like /BIOL116/project/mealworm.png. Whereas the absolute path might look like C:://Documents/BIOL116/project/mealworm.png.
 
 <a id="Random-assignment">**Random assignment:**</a> Assigning participants of a research study to each condition using a method of randomization. This ensures that each participant has an equal chance of being placed in each condition and helps to minimize bias. 
 
 <a id="Range">**Range:**</a> A descriptive statistic or measure of variation for a set of values. Specifically, it measures the difference between the highest and lowest values.
+
+<a id="Registered-report">**Registered report:**</a> "A publishing format that emphasizes the importance of the research question and the quality of methodology by conducting peer review prior to data collection. High quality protocols are then provisionally accepted for publication if the authors follow through with the registered methodology." [Center for Open Science](https://www.cos.io/initiatives/registered-reports)
 
 <a id="Replication">**Replication:**</a> Thorough repetition of a study, using the same methods but different data.
 
